faculty profile, mouse brain

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -171,3 +171,15 @@ a {
   color: #666;
   font-size: 0.9em;
 }
+
+.faculty-profile-link {
+  color: #333;
+  text-decoration: underline;
+  margin-top: 0.25rem;
+  font-size: 0.9em;
+}
+
+.faculty-profile-link a {
+  color: #333;
+  text-decoration: underline;
+}
